--- a/sass/partials/_query.scss
+++ b/sass/partials/_query.scss
@@ -205,6 +205,9 @@
 
 
 // logo
+.logo_container {
+	overflow: hidden;
+}
 .logo_slider {
 width: 100%;
 height: auto;
